# RollingWAM

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  pyproject.toml
configs/: sim_robotwin.yaml  train.yaml
configs/data/: robotwin.yaml  robotwin_selected_tasks.yaml
configs/model/: rollingwam.yaml  rollingwam_joint.yaml
configs/task/: robotwin_rolling_3cam_384_1e-4.yaml  robotwin_rolling_joint_3cam_384_1e-4.yaml  robotwin_selected_tasks_rolling_3cam_384_1e-4.yaml  robotwin_selected_tasks_rolling_joint_3cam_384_1e-4.yaml
experiments/robotwin/: eval_robotwin_single.py  run_robotwin_manager.py
experiments/robotwin/rollingwam_policy/: __init__.py  deploy_policy.py  deploy_policy.yml
scripts/: __init__.py  precompute_text_embeds.py  preprocess_action_dit_backbone.py  train.py  train_zero1.sh  train_zero2.sh
scripts/accelerate_configs/: accelerate_zero0.yaml  accelerate_zero1_ds.yaml  accelerate_zero2_ds.yaml
scripts/ds_configs/: ds_zero1_config.json  ds_zero2_config.json
src/rollingwam/: __init__.py  runtime.py  trainer.py
src/rollingwam/datasets/: dataset_utils.py
src/rollingwam/datasets/lerobot/: base_lerobot_dataset.py  robot_video_dataset.py  text_cache.py
src/rollingwam/datasets/lerobot/lerobot/: lerobot_dataset.py
src/rollingwam/models/: __init__.py
src/rollingwam/models/wan22/: action_dit.py  mot.py  rollingwam.py  rollingwam_joint.py  wam.py  wan_video_dit.py  wan_video_vae.py
src/rollingwam/utils/: __init__.py  config_resolvers.py  fs.py  logging_config.py  misc.py  pytorch_utils.py  samplers.py  video_io.py  video_metrics.py
(+12 files in other folders)
